# SO2_GAME

./: Board_32x24.txt  CMakeLists.txt  Client.c  README.md  Server.c
lib/: beastFunc.c  beastFunc.h  boardFunc.c  boardFunc.h  clientFunc.c  clientFunc.h  player-beast_structures.h  playerFunc.c  playerFunc.h  serverFunc.c  serverFunc.h
